#52 connection to micro-service created

--- a/backend_application/app/wikisearch/templates/index.html
+++ b/backend_application/app/wikisearch/templates/index.html
@@ -145,14 +145,16 @@ li {
 </head>
 <body>
 {#    search form     #}
-    <form class="form-wrapper">
-        <input type="text" id="search" placeholder="Search for..." required>
+    <form class="form-wrapper"  method="GET">
+        {% csrf_token%}
+        {{form}}
         <input type="submit" value="Search" id="submit">
-    </form>
+    </form> <span class="subtitle">{{ art.temperature }}°==</span>
+                        <br> {{ art.description }}
 <ul>
 {% for article in article_list %}
      <li>
-    <h3><a href={{article.url}}> {{article.title}}</a></h3>
+    <h3><a href={{article.url}} > {{article.title}}</a></h3>
       <p>{{article.text}}</p>
    </li>
 {% empty %}
@@ -176,6 +178,7 @@ li {
       </div>
   {% endif %}
 {% endblock %}
+
 
 
 </section>
